# theolab-api

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.cfg  tasks.py  test.html  test.ipynb  test_editor.html
.github/workflows/: test.yml
.ipynb_checkpoints/: test-checkpoint.ipynb
deploy/: docker-compose.yml
deploy/dump/: SCRIBES.sql  test_dump.sql
deploy/keycloak/: demo-kc-conf.json  export_users_keycloak.sh  realm-export.json
docs/: FEATURES.md  GLOSSARY.md
front/: README.md  package-lock.json  package.json
front/src/: .App.vue.swp  App.vue  main.js
front/src/router/: index.js
front/src/views/: FolioMenu.vue  FolioViewer.vue  HomePage.vue  ManuscriptMenu.vue  TraditionMenu.vue
src/backend/: main.py
src/backend/api/: app.py
src/backend/api/oidc/: __init__.py  errors.py  models.py  oidc_auth_client.py  provider.py
src/backend/contexts/: __init__.py
src/backend/contexts/collations/: db.py  models.py  router.py  utils.py
src/backend/contexts/manuscripts/: db.py  models.py  router.py
src/backend/contexts/morphological_analysis/: db.py  router.py
src/backend/contexts/scribes/: db.py  models.py  router.py  utils.py
src/backend/contexts/text/: db.py  (+2 more)
src/backend/settings/: __init__.py  settings.py
src/backend/tools/: sql_client.py
tests/integration/: README.md  __init__.py
tests/integration/collations/: test_api.py  test_db.py
tests/integration/manuscripts/: test_api.py  test_db.py
tests/integration/scribes/: test_db.py
tests/integration/variants/: __init__.py
tests/unittests/: test_utils.py
